Wed Jun 13 07:52:44 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.cpp:
          Simplified logging of timestamps

Wed Jun 13 05:52:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CollocatedPubSub/Base/Collocated_Base.idl:
          Layout change

        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender_exec.cpp:
          Compare with correct nil value

        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender_exec.cpp:
          We don't support comparing rti and dds4ccm instance handles anymore,
          removed this from the test

        * connectors/dds4ccm/tests/LateBinding/ReadGet/Sender/RG_LateBinding_Sender_exec.cpp:
          Set point to zero

Tue Jun 12 18:27:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Base/Unkeyed_Test_Base.idl:
        * connectors/dds4ccm/tests/UnkeyedWriter/Base/Writer_Base.idl:
          These files where defining OpenDDS keys which shouldn't have been done

Tue Jun 12 17:24:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_dcps_instance_handleC.h:
        * connectors/dds4ccm/idl/ndds/ndds_dcps_instance_handleC.cpp:
        * connectors/dds4ccm/impl/ndds/convertors/InstanceHandle_t.h:
          Changed the operators to compare instance handles. With RTI DDS
          it seems there are multiple values that are considered nil, so
          handle nil values by using DDS_InstanceHandle_is_nil and if both
          handles are not nil, use DDS_InstanceHandle_equals

        * connectors/dds4ccm/impl/Updater_T.cpp:
          Added logging when we get an instance back

        * connectors/dds4ccm/impl/ndds/DataWriter_T.cpp:
          Initialize variable with handl nil
