@@ -1,3 +1,8 @@
+Wed Jun 13 10:42:23 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender_exec.cpp:
+          Fixed compile error
+
 Wed Jun 13 07:52:44 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
